--- a/lenmash/index.html
+++ b/lenmash/index.html
@@ -3,100 +3,103 @@
   <head>
     <link rel="stylesheet" href="css/style.css" />
     <title>Charming Treasures</title>
-    <link rel="icon" href="img/icon_titile.png" type="image/x-icon">
+    <link rel="icon" href="img/icon_title.png" type="image/x-icon">
   </head>
 
   <body>
     <div class="home">
       <!-- ШАПКА САЙТА -->
       <header class="header">
-        <div class="baсkground_header">
-          <p class="slogan">ЛУЧШИЙ СЕРВИС ДЛЯ ВЫБОРА ПОДАРКОВ</p>
-          <a href="index.html" class="gla_button">
-          <img class="logo" src="img/logo.png" />
+        <div class="background_header">
+          <p id="slogan">ЛУЧШИЙ СЕРВИС ДЛЯ ВЫБОРА ПОДАРКОВ</p>
+          <img id="logo" src="img/logo.png" />
+          <a href="index.html" class="main_button"></a>
         </div>
       </header>
-
-      <div class="banner">
-        <img class="photo" src="img/photo-1.png" />
-        <div class="bloc">
-          <div class="overlap">
-            <div class="button">
-              <div class="div">
-                <div class="text-button">ПОДОБРАТЬ ПОДАРОК</div>
-                <img class="icon-lypa" src="img/icon-lypa.png" />
-              </div>
+      <!-- ПЕРВЫЙ БЛОК -->
+      <div class="block_main">
+        <img id="photo_gift" src="img/photo-1.png" />
+        <div class="message_window">
+          <div class="button_pick_up_a_gift">
+            <div class="button_pick_up_a_gift_background">
+              <div class="button_pick_up_a_gift_text">ПОДОБРАТЬ ПОДАРОК</div>
+              <img class="magnifier_icon" src="img/icon-lypa.png" />
             </div>
-            <a href="index1.html" class="fon-bloc"></a>
-            <img class="icon-pris" src="img/icon-pris.png" />
-            <p class="text-bloc">НЕ ЗНАЕТЕ, КАКОЙ <br />ПОДАРОК ПОДАРИТЬ?<br />МЫ ПОМОЖЕМ!!!</p>
           </div>
+          <a href="index1.html" id="message_window_background-plus_reference"></a>
+          <img class="gift_icon" src="img/icon-pris.png" />
+          <p id="message_window_text">НЕ ЗНАЕТЕ, КАКОЙ <br />ПОДАРОК ПОДАРИТЬ?<br />МЫ ПОМОЖЕМ!!!</p>
         </div>
       </div>
-      <div class="overlap-wrapper">
-        <div class="div-2">
-          <div class="overlap-group-wrapper">
-            <div class="div"><div class="text-wrapper">ПОСМОТЕТЬ ВСЕ ПОДАРКИ</div></div>
-            <a href="index2.html" class="bt_2"></a>
+      <!-- ВТОРОЙ БЛОК -->
+      <div class="block_two">
+        <div class="button_view_all_gifts">
+          <div class="button_view_all_gifts_background">
+            <div class="button_view_all_gifts_text">ПОСМОТЕТЬ ВСЕ ПОДАРКИ</div>
           </div>
-          <div class="bloc-2">
-            <div class="label">
-              <p class="text-label">ВЫХОДНЫЕ В НЕОБЫЧНОМ ОТЕЛЕ<br />5 600 ₽</p>
-              <img class="foto-label" src="img/foto-label-1.png" />
-            </div>
-            <div class="label-2">
-              <p class="p">ТЕСТ-ДРАЙВ САМОЛЕТА<br />ОТ 7 500 ₽</p>
-              <img class="foto-label" src="img/foto-label-2.png" />
-            </div>
-            <div class="label-3">
-              <p class="text-label">НАБОР ПРИГОТОВЛЕНИЯ НАСТОЕК<br />3 190 ₽</p>
-              <img class="img" src="img/foto-label-3.png" />
-            </div>
-            <div class="label-4">
-              <p class="p">НАБЛЮДЕНИЕ ЗА СЕВЕРНЫМ СИЯНИЕМ<br />ОТ 44 900 ₽</p>
-              <img class="foto-label-2" src="img/foto-label-4.png" />
-            </div>
-          </div>
-          <p class="text-banner">ПОДАРКИ, КОТОРЫЕ У НАС ЕСТЬ</p>
+          <a href="index2.html" class="button_view_all_gifts_reference"></a>
         </div>
-      </div>
-      <div class="div-2">
-        <div class="overlap-2">
-          <div class="div-wrapper">
-            <div class="div"><div class="text-button-2">ПОЕХАЛИ</div></div>
-            <a href="index1.html" class="bt_3"></a>
+        <div class="window_gift_examples_">
+          <div class="example_1">
+            <p class="example_1_text">ВЫХОДНЫЕ В НЕОБЫЧНОМ ОТЕЛЕ<br />5 600 ₽</p>
+            <img class="example_1_foto" src="img/foto-label-1.png" />
           </div>
-          <div class="label-5">
-            <div class="label-6">
-              <p class="text">Все наши партнеры проверены и с хорошими отзывами. Никаких комиссий и переплат.</p>
-              <div class="text-num-wrapper"><div class="text-num">3</div></div>
-              <div class="text-zag">ПОКУПАЙТЕ</div>
+          <div class="example_2">
+            <p class="example_2_text">ТЕСТ-ДРАЙВ САМОЛЕТА<br />ОТ 7 500 ₽</p>
+            <img class="example_2_foto" src="img/foto-label-2.png" />
+          </div>
+          <div class="example_3">
+            <p class="example_3_text">НАБОР ПРИГОТОВЛЕНИЯ НАСТОЕК<br />3 190 ₽</p>
+            <img class="example_3_foto" src="img/foto-label-3.png" />
+          </div>
+          <div class="example_4">
+            <p class="example_4_text">НАБЛЮДЕНИЕ ЗА СЕВЕРНЫМ СИЯНИЕМ<br />ОТ 44 900 ₽</p>
+            <img class="example_4_foto" src="img/foto-label-4.png" />
+          </div>
+        </div>
+        <p class="block_two_name">ПОДАРКИ, КОТОРЫЕ У НАС ЕСТЬ</p>
+      </div>
+      <!-- ТРЕТИЙ БЛОК -->
+      <div class="block_three">
+        <div class="message_window_2">
+          <div class="button_go">
+            <div class="button_go_background">
+              <div class="button_go_text">ПОЕХАЛИ</div></div>
+            <a href="index1.html" id="button_go_reference"></a>
+          </div>
+          <div class="window_work_site">
+            <div class="window_work_site_block_3">
+              <p id="window_work_site_block_3_text">Все наши партнеры проверены и с хорошими отзывами. Никаких комиссий и переплат.</p>
+              <div class="window_work_site_block_3_circle">
+                <div class="window_work_site_block_3_num">3</div></div>
+              <div class="window_work_site_block_3_name">ПОКУПАЙТЕ</div>
             </div>
-            <div class="label-7">
-              <div class="text-text">ВЫБЕРИТЕ ПОДАРОК</div>
-              <div class="text-num-wrapper"><div class="text-num">2</div></div>
-              <p class="text-wrapper-2">
+            <div class="window_work_site_block_2">
+              <div class="window_work_site_block_2_name">ВЫБЕРИТЕ ПОДАРОК</div>
+              <div class="window_work_site_block_2_circle">
+                <div class="window_work_site_block_2_num">2</div></div>
+              <p id="window_work_site_block_2_text">
                 Предложим оптимальные варианты на выбор, с учетом портрета получателя и наших рекомендаций
               </p>
             </div>
-            <div class="label-8">
-              <p class="text-wrapper-2">
+            <div class="window_work_site_block_1">
+              <p id="window_work_site_block_1_text">
                 Умная система составит персональный портрет получателя подарка для супер точного результата
               </p>
-              <div class="overlap-3"><div class="text-num">1</div></div>
-              <div class="text-text-zag">ЗАДАЙТЕ УСЛОВИЯ<br />ПОДБОРА</div>
+              <div class="window_work_site_block_1_circle">
+                <div class="window_work_site_block_1_num">1</div></div>
+              <div class="window_work_site_block_1_name">ЗАДАЙТЕ УСЛОВИЯ<br />ПОДБОРА</div>
             </div>
           </div>
-          <div class="fon-text-banner">
-            <div class="overlap-4">
-              <div class="text-banner-2">КАК РАБОТАЕТ СЕРВИС</div>
-              <img class="icon-banner" src="img/icon-banner-3.png" />
-            </div>
+          <div class="block_three_name">
+            <div class="block_three_name_text">КАК РАБОТАЕТ СЕРВИС</div>
+            <img class="icon_arrow" src="img/icon-banner-3.png" />
           </div>
         </div>
       </div>
-      <div class="separation"></div>
-      <div class="separation-2"></div>
+      <!-- РАЗДЕЛИТЕЛИ БЛОКОВ -->
+      <div class="division"></div>
+      <div class="division-2"></div>
     </div>
   </body>
 </html>
