--- a/lenmash/index1.html
+++ b/lenmash/index1.html
@@ -3,31 +3,31 @@
   <head>
     <link rel="stylesheet" href="css/style1.css" />
     <title>Charming Treasures</title>
-    <link rel="icon" href="img/icon_titile.png" type="image/x-icon">
+    <link rel="icon" href="img/icon_title.png" type="image/x-icon">>
   </head>
 
   <body>
-    <div class="screen">
+    <div class="page_2">
       <!-- ШАПКА САЙТА -->
       <header class="header">
-        <div class="overlap-group">
-          <p class="slogan">ЛУЧШИЙ СЕРВИС ДЛЯ ВЫБОРА ПОДАРКОВ</p>
-          <a href="index.html" class="gla_button">
-          <img class="logo" src="img/logo.png" />
+        <div class="background_header">
+          <p id="slogan">ЛУЧШИЙ СЕРВИС ДЛЯ ВЫБОРА ПОДАРКОВ</p>
+          <img id="logo" src="img/logo.png" />
+          <a href="index.html" class="main_button"></a>
         </div>
       </header>
 
-      <div class="banner">
-        <img class="photo" src="img/photo-1.png" />
-        <div class="podobrat">
-          <div class="text-wrapper">Пол получателя</div>
-          <div class="div">Возраст получателя</div>
-          <div class="text-wrapper-2">Кем приходится</div>
-          <div class="text-wrapper-3">Повод</div>
-          <div class="text-wrapper-4">Увлечение</div>
-          <p class="p">Ответь на несколько вопросов, чтобы найти идеальный подарок</p>
-          <div class="text-wrapper-5">Бюджет</div>
-          <input list="list2" id="rectangle" name="age">
+      <div class="block_main">
+        <img id="photo_gift" src="img/photo-1.png" />
+        <div class="message_window">
+          <div class="text_wrapper_recipient_gender">Пол получателя</div>
+          <div class="text_wrapper_recipient_age">Возраст получателя</div>
+          <div class="text_wrapper_who_has_to">Кем приходится</div>
+          <div class="text_wrapper_cause">Повод</div>
+          <div class="text_wrapper_hobby">Увлечение</div>
+          <p class="block_main_text">Ответь на несколько вопросов, чтобы найти идеальный подарок</p>
+          <div class="text_wrapper_hobby_budget">Бюджет</div>
+          <input list="list2" id="input_2" name="age">
           <datalist id="list2">
             <option value="12-16">
             <option value="16-22">
@@ -35,7 +35,7 @@
             <option value="35-55">
             <option value="55 +">
           </datalist>
-          <input list="list3" id="rectangle-2" name="prixodit">
+          <input list="list3" id="input_3" name="prixodit">
           <datalist id="list3">
             <option value="Любим(ый/ая)">
             <option value="Жена/муж">
@@ -47,7 +47,7 @@
             <option value="Коллега">
             <option value="Начальница/начальник">
           </datalist>
-          <input list="list4" id="rectangle-3" name="povod">
+          <input list="list4" id="input_4" name="povod">
           <datalist id="list4">
             <option value="День Рождения">
             <option value="Юбилей">
@@ -64,12 +64,12 @@
             <option value="Развод">
             <option value="Другой повод">
           </datalist>
-          <input list="list1" id="view" name="pol">
+          <input list="list1" id="input_1" name="pol">
           <datalist id="list1">
             <option value="Мужской">
             <option value="Женский">
           </datalist>
-          <input list="list5" id="rectangle-4" name="hobi">
+          <input list="list5" id="input_5" name="hobi">
           <datalist id="list5">
             <option value="Авто и мото">
             <option value="IT">
@@ -86,17 +86,17 @@
             <option value="Уход за собой">
             <option value="Экстрим и приключения">
           </datalist>
-          <input list="list6" id="rectangle-5" name="many">
+          <input list="list6" id="input_6" name="many">
           <datalist id="list6">
             <option value="До 5.000 ₽">
             <option value="От 5.000 до 10.000 ₽">
             <option value="От 10.000 ₽">
             <option value="Не важно">
           </datalist>
-          <div class="overlap-group-wrapper">
-            <div class="div-wrapper">
-              <div class="text-wrapper-6">ПОДОБРАТЬ</div>
-              <a href="index2.html" class="bt"></a>
+          <div class="button_pick_up">
+            <div class="button_pick_up_background">
+              <div class="button_pick_up_text">ПОДОБРАТЬ</div>
+              <a href="index2.html" class="button_pick_up_reference"></a>
             </div>
           </div>
         </div>
