--- a/lenmash/index2.html
+++ b/lenmash/index2.html
@@ -7,13 +7,13 @@
   </head>
 
   <body>
-    <div class="screen">
+    <div class="page_3">
       <!-- ШАПКА САЙТА -->
       <header class="header">
-        <div class="overlap-group">
-          <p class="slogan">ЛУЧШИЙ СЕРВИС ДЛЯ ВЫБОРА ПОДАРКОВ</p>
-          <a href="index.html" class="gla_button">
-          <img class="logo" src="img/logo.png" />
+        <div class="background_header">
+          <p id="slogan">ЛУЧШИЙ СЕРВИС ДЛЯ ВЫБОРА ПОДАРКОВ</p>
+          <img id="logo" src="img/logo.png" />
+          <a href="index.html" class="main_button"></a>
         </div>
       </header>
 
