--- a/lenmash/index4.html
+++ b/lenmash/index4.html
@@ -12,8 +12,8 @@
       <header class="header">
         <div class="overlap-group">
           <p class="slogan">ЛУЧШИЙ СЕРВИС ДЛЯ ВЫБОРА ПОДАРКОВ</p>
-          <a href="index.html" class="gla_button">
           <img class="logo" src="img/logo.png" />
+          <a href="index.html" class="gla_button"></a>
         </div>
       </header>
       <!-- ШАПКА САЙТА -->
